--- a/App/imgui.ini
+++ b/App/imgui.ini
@@ -15,6 +15,10 @@ Collapsed=1
 Pos=60,60
 Size=339,358
 
+[Window][FPS Display]
+Pos=1033,113
+Size=257,138
+
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0v
